Change header font size to avoid wrapping of text (#218)

--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -315,7 +315,7 @@ fieldset[disabled] .btn-xl.active {
 
 @media(min-width:870px) {
   .navbar-nav>li>a {
-    font-size: 13px;
+    font-size: 12px;
   }
 }
 
